// ORIG FILE: https://raw.githubusercontent.com/decentraland/rpc/main/src/protocol/index.proto
// THIS FILE IS AUTOGENERATED
syntax = "proto3";

message RpcMessageHeader {
  fixed32	message_identifier = 1;
}

enum RpcMessageTypes {
  RpcMessageTypes_EMPTY = 0;
  RpcMessageTypes_REQUEST = 1;
  RpcMessageTypes_RESPONSE = 2;
  RpcMessageTypes_STREAM_MESSAGE = 3;
  RpcMessageTypes_STREAM_ACK = 4;
  RpcMessageTypes_CREATE_PORT = 5;
  RpcMessageTypes_CREATE_PORT_RESPONSE = 6;
  RpcMessageTypes_REQUEST_MODULE = 7;
  RpcMessageTypes_REQUEST_MODULE_RESPONSE = 8;
  RpcMessageTypes_REMOTE_ERROR_RESPONSE = 9;
  RpcMessageTypes_DESTROY_PORT = 10;
  RpcMessageTypes_SERVER_READY = 11;
}

message CreatePort {
  fixed32	message_identifier = 1;
  string	port_name = 4;
}

message CreatePortResponse {
  fixed32	message_identifier = 1;
  fixed32	port_id = 2;
}

message RequestModule {
  fixed32	message_identifier = 1;
  fixed32	port_id = 2;
  string	module_name = 4;
}

message RequestModuleResponse {
  fixed32	message_identifier = 1;
  fixed32	port_id = 2;
  repeated ModuleProcedure	procedures = 5;
}

message DestroyPort {
  fixed32	message_identifier = 1;
  fixed32	port_id = 2;
}

message ModuleProcedure {
  fixed32	procedure_id = 1;
  string	procedure_name = 2;
}

message Request {
  fixed32	message_identifier = 1;
  fixed32	port_id = 2;
  fixed32	procedure_id = 4;
  bytes	payload = 6;
}

message RemoteError {
  fixed32	message_identifier = 1;
  fixed32	error_code = 2;
  string	error_message = 3;
}

message Response {
  fixed32	message_identifier = 1;
  bytes	payload = 6;
}

message StreamMessage {
  fixed32	message_identifier = 1;
  fixed32	port_id = 2;
  fixed32	sequence_id = 4;
  bytes	payload = 6;
  bool	closed = 7;
  bool	ack = 8;
}